syntax = "proto3";

package github.nhassl3.pizzaland.PizzaLand;

import "third_party/googleapis/google/api/field_behavior.proto";
import "validate/validate.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.nhassl3.pizzaland.v1;pizzalndv1";

service PizzaLand {
  rpc Save(SaveRequest) returns (SaveResponse); // Save pizza procedure
  rpc Get(GetRequest) returns (GetResponse); // Get pizza procedure
  rpc List(ListRequest) returns (ListResponse); // Get list of the pizza procedure
  rpc Update(UpdateRequest) returns (UpdateResponse); // Update pizza properties or price procedure
  rpc Remove(RemoveRequest) returns (RemoveResponse); // Remove pizza from system procedure
  rpc SaveCategory(SaveCategoryRequest) returns (SaveCategoryResponse); // Save category for pizza on the system procedure
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse); // Get list of the category procedure
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse); // Update category properties procedure
  rpc RemoveCategory(RemoveCategoryRequest) returns (RemoveCategoryResponse); // Remove category from the system procedure
}

message SaveRequest {
  PizzaProperties pizza = 1;
}

message SaveResponse {
  uint64 pizza_id = 1;
}

message GetRequest {
  oneof identifier {
    uint64 pizza_id = 1 [
      (validate.rules).uint64.gt = 0
    ];
    string pizza_name = 2 [
      (validate.rules).string = {min_len: 3, max_len: 50}
    ];
  }
}

message GetResponse {
  PizzaProperties pizza = 1;
}

message ListRequest {
  optional google.protobuf.UInt32Value category_id = 4 [
    (validate.rules).uint32.gt = 0,
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.StringValue category_name = 1 [
    (validate.rules).string = {min_len: 3, max_len: 26},
    (google.api.field_behavior) = OPTIONAL
  ];
  uint32 offset = 2 [
    (validate.rules).uint32.gte = 48,
    (google.api.field_behavior) = REQUIRED
  ];
  uint32 limit = 3 [
    (validate.rules).uint32 = {in: [12, 24, 36, 48]},
    (google.api.field_behavior) = REQUIRED
  ];
}

message ListResponse {
  repeated PizzaProperties pizza = 1;
}

message UpdateRequest {
  uint64 id = 7 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  optional google.protobuf.UInt32Value category_id = 1 [
    (validate.rules).uint32.gt = 0,
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.StringValue name = 2 [
    (validate.rules).string = {min_len: 3, max_len: 50},
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.StringValue description = 3 [
    (validate.rules).string = {min_len: 16, max_len: 256},
    (google.api.field_behavior) = OPTIONAL
  ];
  optional TypeDough type_dough = 4 [
    (validate.rules).enum = {defined_only: true, not_in: [0]},
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.FloatValue price = 5 [
    (validate.rules).float.gte = 109,
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.UInt32Value diameter = 6 [
    (validate.rules).uint32 = {in: [26, 30, 40]},
    (google.api.field_behavior) = OPTIONAL
  ];
}

message UpdateResponse {
  bool success = 1;
}

message RemoveRequest {
  oneof identifier {
    uint64 pizza_id = 1 [
      (validate.rules).uint64.gt = 0
    ];
    string pizza_name = 2 [
      (validate.rules).string.min_len = 3
    ];
  }
}

message RemoveResponse {
  bool success = 1;
}

message SaveCategoryRequest {
  CategoryProperties category = 1;
}

message SaveCategoryResponse {
  uint32 category_id = 1;
}

message GetCategoryRequest {
  oneof identifier {
    uint32 category_id = 1 [
      (validate.rules).uint32.gt = 0
    ];
    string category_name = 2 [
      (validate.rules).string.min_len = 3
    ];
  }
}

message GetCategoryResponse {
  ListResponse pizza = 1;
}

message UpdateCategoryRequest {
  uint32 category_id = 3 [
    (validate.rules).uint32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  optional google.protobuf.StringValue name = 1 [
    (validate.rules).string = {min_len: 3, max_len: 26},
    (google.api.field_behavior) = OPTIONAL
  ];
  optional google.protobuf.StringValue description = 2 [
    (validate.rules).string = {min_len: 16, max_len: 256},
    (google.api.field_behavior) = OPTIONAL
  ];
}

message UpdateCategoryResponse {
  bool success = 1;
}


message RemoveCategoryRequest {
  oneof identifier {
    uint32 category_id = 1 [
      (validate.rules).uint32.gt = 0
    ];
    string category_name = 2 [
      (validate.rules).string.min_len = 3
    ];
  }
}

message RemoveCategoryResponse {
  bool success = 1;
}

enum TypeDough {
  UNKNOWN = 0;
  TRADITIONAL_DOUGH = 1;
  THIN_DOUGH = 2;
}

// Composite structure for pizza properties
message PizzaProperties {
  optional google.protobuf.UInt64Value pizza_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = OPTIONAL
  ];
  uint32 category_id = 2 [
    (validate.rules).uint32.gt = 0,
    (google.api.field_behavior) = OPTIONAL
  ];
  string name = 3 [
    (validate.rules).string = {min_len: 3, max_len: 50},
    (google.api.field_behavior) = REQUIRED
  ];
  google.protobuf.StringValue description = 4 [
    (validate.rules).string = {min_len: 16, max_len: 256},
    (google.api.field_behavior) = OPTIONAL
  ];
  repeated TypeDough type_dough = 5 [
    (validate.rules).repeated = {
      items: {
        enum: { defined_only: true, not_in: [0] }
      },
      min_items: 1  // optional: ensure non-empty
    },
    (google.api.field_behavior) = REQUIRED
  ];
  float price = 6 [
    (validate.rules).float.gte = 109,
    (google.api.field_behavior) = REQUIRED
  ];
  uint32 diameter = 7 [
    (validate.rules).uint32 = {in: [26, 30, 40]},
    (google.api.field_behavior) = REQUIRED
  ];
}

message CategoryProperties {
  optional google.protobuf.UInt32Value category_id = 1 [
    (validate.rules).uint32.gt = 0,
    (google.api.field_behavior) = OPTIONAL
  ];
  string name = 2 [
    (validate.rules).string = {min_len: 3, max_len: 26},
    (google.api.field_behavior) = REQUIRED
  ];
  google.protobuf.StringValue description = 3 [
    (validate.rules).string = {min_len: 16, max_len: 256},
    (google.api.field_behavior) = OPTIONAL
  ];
}